[mvn] Update maven wrapper